// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS SearchBar component should render when cancel button is disabled 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={
      <Themed.Icon
        color="#7d7d7d"
        name="ios-search"
        size={20}
        type="ionicon"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      disabled={true}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              undefined,
              undefined,
              Object {
                "color": "#cdcdcd",
              },
            ]
          }
        >
          Cancel
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`iOS SearchBar component should render when cancel button is disabled with custom style 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={
      <Themed.Icon
        color="#7d7d7d"
        name="ios-search"
        size={20}
        type="ionicon"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      disabled={true}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            undefined,
            Object {
              "backgroundColor": "#cdcdcd",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              undefined,
              undefined,
              Object {
                "color": "#ffffff",
              },
            ]
          }
        >
          Cancel
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`iOS SearchBar component should render with a custom Cancel button 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={
      <Themed.Icon
        color="#7d7d7d"
        name="ios-search"
        size={20}
        type="ionicon"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            Object {
              "elevation": 0,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              Object {
                "color": "black",
              },
              Object {
                "fontSize": 12,
              },
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`iOS SearchBar component should render with a custom Cancel button title 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={
      <Themed.Icon
        color="#7d7d7d"
        name="ios-search"
        size={20}
        type="ionicon"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "primary": "#2196f3",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "ios": Object {
              "error": "#ff3b30",
              "primary": "#007aff",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
          "success": "#52c41a",
          "warning": "#faad14",
        },
      }
    }
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          Annuler
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`iOS SearchBar component should render with a custom clear icon 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={
      <Themed.Icon
        color="#7d7d7d"
        name="ios-search"
        size={20}
        type="ionicon"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "primary": "#2196f3",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "ios": Object {
              "error": "#ff3b30",
              "primary": "#007aff",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
          "success": "#52c41a",
          "warning": "#faad14",
        },
      }
    }
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`iOS SearchBar component should render with a custom clear icon component 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={
      <Themed.Icon
        color="#7d7d7d"
        name="ios-search"
        size={20}
        type="ionicon"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "primary": "#2196f3",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "ios": Object {
              "error": "#ff3b30",
              "primary": "#007aff",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
          "success": "#52c41a",
          "warning": "#faad14",
        },
      }
    }
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`iOS SearchBar component should render with a custom methods 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={
      <Themed.Icon
        color="#7d7d7d"
        name="ios-search"
        size={20}
        type="ionicon"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[MockFunction]}
    onChangeText={[Function]}
    onClear={[MockFunction]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "primary": "#2196f3",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "ios": Object {
              "error": "#ff3b30",
              "primary": "#007aff",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
          "success": "#52c41a",
          "warning": "#faad14",
        },
      }
    }
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`iOS SearchBar component should render with a custom search icon 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={
      <Themed.Icon
        color="#7d7d7d"
        name="ios-search"
        size={50}
        type="ionicon"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "primary": "#2196f3",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "ios": Object {
              "error": "#ff3b30",
              "primary": "#007aff",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
          "success": "#52c41a",
          "warning": "#faad14",
        },
      }
    }
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`iOS SearchBar component should render with a custom search icon component 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={<Component />}
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "primary": "#2196f3",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "ios": Object {
              "error": "#ff3b30",
              "primary": "#007aff",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
          "success": "#52c41a",
          "warning": "#faad14",
        },
      }
    }
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`iOS SearchBar component should render with loading 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "height": 70,
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={
      <Themed.Icon
        color="#7d7d7d"
        name="ios-search"
        size={20}
        type="ionicon"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#999999"
          hidesWhenStopped={true}
          size="small"
          style={
            Object {
              "flex": 1,
              "marginRight": 5,
            }
          }
        />
      </Component>
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "primary": "#2196f3",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "ios": Object {
              "error": "#ff3b30",
              "primary": "#007aff",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
          "success": "#52c41a",
          "warning": "#faad14",
        },
      }
    }
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`iOS SearchBar component should render without clear icon 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={
      <Themed.Icon
        color="#7d7d7d"
        name="ios-search"
        size={20}
        type="ionicon"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "primary": "#2196f3",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "ios": Object {
              "error": "#ff3b30",
              "primary": "#007aff",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
          "success": "#52c41a",
          "warning": "#faad14",
        },
      }
    }
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`iOS SearchBar component should render without issues 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={
      <Themed.Icon
        color="#7d7d7d"
        name="ios-search"
        size={20}
        type="ionicon"
      />
    }
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "primary": "#2196f3",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "ios": Object {
              "error": "#ff3b30",
              "primary": "#007aff",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
          "success": "#52c41a",
          "warning": "#faad14",
        },
      }
    }
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;

exports[`iOS SearchBar component should render without search icon 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#f5f5f5",
      "flexDirection": "row",
      "overflow": "hidden",
      "paddingBottom": 13,
      "paddingTop": 13,
      "width": "100%",
    }
  }
>
  <ForwardRef(Themed.Input)
    containerStyle={
      Object {
        "paddingHorizontal": 0,
      }
    }
    inputContainerStyle={
      Object {
        "backgroundColor": "#dcdce1",
        "borderBottomWidth": 0,
        "borderRadius": 9,
        "height": 36,
        "marginLeft": 15,
        "marginRight": 15,
      }
    }
    inputStyle={
      Object {
        "marginLeft": 6,
      }
    }
    leftIcon={null}
    leftIconContainerStyle={
      Object {
        "marginLeft": 8,
      }
    }
    onBlur={[Function]}
    onCancel={[Function]}
    onChangeText={[Function]}
    onClear={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#7d7d7d"
    rightIcon={
      <Component
        style={
          Object {
            "flexDirection": "row",
          }
        }
      />
    }
    rightIconContainerStyle={
      Object {
        "marginRight": 8,
      }
    }
    testID="searchInput"
    theme={
      Object {
        "colors": Object {
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "primary": "#2196f3",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "ios": Object {
              "error": "#ff3b30",
              "primary": "#007aff",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
          "success": "#52c41a",
          "warning": "#faad14",
        },
      }
    }
    value=""
  />
  <Component
    onLayout={[Function]}
    style={
      Object {
        "marginLeft": 0,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Component
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#007aff",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          Cancel
        </Text>
      </Component>
    </TouchableOpacity>
  </Component>
</Component>
`;
